Try to fix geotagger image being too high on mobile

--- a/project/ajapaik/static/css/ajapaik-geotagger-plugin.css
+++ b/project/ajapaik/static/css/ajapaik-geotagger-plugin.css
@@ -144,6 +144,9 @@
         -webkit-line-clamp: 1;
         max-height: 20px;
     }
+    #ajp-geotagger-image-thumb {
+        max-height: 150px;
+    }
 }
 
 #ajp-geotagger-stats-container {
